disabled top menu position

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style type="text/css" media="screen">
       body {
-        padding-top: 100px;
+        // padding-top: 100px;
       }
 
       textarea {
@@ -30,7 +30,7 @@
 <body>
 
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <h2>GitHub flavored markdown with angular.js and marked</h2>
   </div>
